Version 1.2.5+svn:
 * WML engine
   * fix [variables] not working properly in scenarios (bug #9342)
 * language and i18n:
   * updated translations: British English, Danish, Finnish, Spanish, Swedish
   * updated DejaVuSans font to version 2.18
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
   * Show the (possibly bogus) GPV and fog settings of games with "Use map
     settings" on in a darker font. (patch #771 by uso)
 * misc:
   * added some extra headers for the upcomming gcc 4.3 (debian bug #417764)
   * the unit name generation could with different locales call get_random() a
     different number of times. This lead to different names and traits.
     Changed to call random a fixed number of times which fixes the traits.

Version 1.2.5:
 * campaigns:
   * Under the Burning Suns
     * new ranged attack frames for the Naga Hunter
     * fixed many wrong image references
     * updated Elyssas anims to match the "mainline" mage units
 * language and i18n:
   * new and updated manual: Serbian
   * updated translations: Afrikaans, Bulgarian, Chinese, Czech, Dutch, French,
     German, Italian, Japanese, Polish, Portuguese (Brazil), Serbian, Slovak,
     Slovenian, Spanish, Swedish
   * updated DejaVuSans font to version 2.17
 * multiplayer maps:
   * revised maps: Den of Onis, Hamlets, Meteor Lake, Sablestone Delta,
     Silverhead Crossing, Blue Water Province, Wilderlands
 * user interface:
   * ability to view a list of MP servers with the Join Game dialog   
 * misc:
   * corrected all wrong image references found via macroscope

Version 1.2.4:
 * campaigns:
   * Heir to the Throne
     * updated images for Delfador
   * Tutorial
     * merged all unit images used in the tutorial from httt
 * graphics:
   * fixed a missing frame for the white mage
   * improved the mage of light melee animation and changed its melee attack to
     "morning star"