@@ -6,6 +6,8 @@ Version 1.2.5+svn:
    * updated DejaVuSans font to version 2.18
  * user interface:
    * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
+   * Add an additional line below the minimap in the "Multiplayer->Create game"
+     screen that displays the size of the selected map. (patch #776 by uso)
    * Show the (possibly bogus) GPV and fog settings of games with "Use map
      settings" on in a darker font. (patch #771 by uso)
  * misc:
